Apply translation memory

--- a/l10n/po/ja_JP/_versions/1.11/guides/kogito.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/kogito.adoc.po
@@ -417,7 +417,7 @@ msgstr "そして、次のようになるはずです。"
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:200
 msgid "image:kogito-guide-screenshot.png[alt=Process definition]"
-msgstr ""
+msgstr "image:kogito-guide-screenshot.png[alt=プロセス定義]"
 
 #. type: Plain text
 #: upstream/_versions/1.11/guides/kogito.adoc:203
