--- a/l10n/po/ja_JP/_versions/1.11/guides/security-jwt.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.11/guides/security-jwt.adoc.po
@@ -1176,7 +1176,7 @@ msgstr "mp.jwt.verify.publickey"
 #: upstream/_versions/1.11/guides/security-jwt.adoc:947
 #, no-wrap
 msgid "non"
-msgstr ""
+msgstr "non"
 
 #. type: Table
 #: upstream/_versions/1.11/guides/security-jwt.adoc:645
