--- a/l10n/po/ja_JP/_versions/1.7/guides/security-jwt.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/security-jwt.adoc.po
@@ -1125,7 +1125,7 @@ msgstr "mp.jwt.verify.publickey"
 #: upstream/_versions/1.7/guides/security-jwt.adoc:857
 #, no-wrap
 msgid "non"
-msgstr ""
+msgstr "non"
 
 #. type: Table
 #: upstream/_versions/1.7/guides/security-jwt.adoc:618
