--- a/l10n/po/ja_JP/_versions/2.2/guides/kogito.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/kogito.adoc.po
@@ -498,7 +498,7 @@ msgstr "そして、次のようになるはずです。"
 #. type: Plain text
 #: upstream/_versions/2.2/guides/kogito.adoc:236
 msgid "image:kogito-guide-screenshot.png[alt=Process definition]"
-msgstr ""
+msgstr "image:kogito-guide-screenshot.png[alt=プロセス定義]"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/kogito.adoc:239
