--- a/l10n/po/ja_JP/_versions/2.2/guides/security-openid-connect-dev-services.adoc.po
+++ b/l10n/po/ja_JP/_versions/2.2/guides/security-openid-connect-dev-services.adoc.po
@@ -126,7 +126,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/security-openid-connect-dev-services.adoc:48
 #, no-wrap
 msgid "Authorization Code Grant"
-msgstr ""
+msgstr "認可コード グラント"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/security-openid-connect-dev-services.adoc:51
@@ -174,7 +174,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/security-openid-connect-dev-services.adoc:70
 #, no-wrap
 msgid "Implicit Grant"
-msgstr ""
+msgstr "インプリシット・グラント"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/security-openid-connect-dev-services.adoc:73
@@ -185,7 +185,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/security-openid-connect-dev-services.adoc:74
 #, no-wrap
 msgid "Password Grant"
-msgstr ""
+msgstr "パスワード・グラント"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/security-openid-connect-dev-services.adoc:77
@@ -227,7 +227,7 @@ msgstr ""
 #: upstream/_versions/2.2/guides/security-openid-connect-dev-services.adoc:94
 #, no-wrap
 msgid "Client Credentials Grant"
-msgstr ""
+msgstr "クライアントクレデンシャル・グラント"
 
 #. type: Plain text
 #: upstream/_versions/2.2/guides/security-openid-connect-dev-services.adoc:97
