--- a/l10n/po/ja_JP/_versions/main/guides/kogito-dev-services.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kogito-dev-services.adoc.po
@@ -143,7 +143,7 @@ msgstr "参照"
 #. type: Plain text
 #: upstream/_versions/main/guides/kogito-dev-services.adoc:64
 msgid "xref:dev-ui.adoc[Dev UI]"
-msgstr ""
+msgstr "xref:dev-ui.adoc[Dev UI]"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kogito-dev-services.adoc:65
