--- a/l10n/po/ja_JP/_versions/main/guides/kogito.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kogito.adoc.po
@@ -84,7 +84,7 @@ msgstr "Eclipse"
 #. type: Plain text
 #: upstream/_versions/main/guides/kogito.adoc:40
 msgid "To be able to make use of visual modelling of your processes, download Eclipse IDE and install from Marketplace Eclipse BPMN2 Modeller plugin (with jBPM Runtime Extension)"
-msgstr ""
+msgstr "プロセスのビジュアル・モデリングを利用するには、Eclipse IDEをダウンロードし、MarketplaceからEclipse BPMN2 Modellerプラグイン（with jBPM Runtime Extension）をインストールします。"
 
 #. type: Labeled list
 #: upstream/_versions/main/guides/kogito.adoc:41
@@ -95,7 +95,7 @@ msgstr "その他のプラットフォーム"
 #. type: Plain text
 #: upstream/_versions/main/guides/kogito.adoc:44
 msgid "You can go to https://kiegroup.github.io/kogito-online/#/download[Business Modeler Hub] to download the latest platforms supported for the https://github.com/kiegroup/kogito-tooling/releases[Kogito tooling releases]."
-msgstr ""
+msgstr "link:https://kiegroup.github.io/kogito-online/#/download[Business Modeler Hub]では、 link:https://github.com/kiegroup/kogito-tooling/releases[Kogito toolingリリース]でサポートされている最新のプラットフォームをダウンロードすることができます。"
 
 #. type: Title ==
 #: upstream/_versions/main/guides/kogito.adoc:45
@@ -476,7 +476,7 @@ msgstr "そして、次のようになるはずです。"
 #. type: Plain text
 #: upstream/_versions/main/guides/kogito.adoc:232
 msgid "image:kogito-guide-screenshot.png[alt=Process definition]"
-msgstr ""
+msgstr "image:kogito-guide-screenshot.png[alt=プロセス定義]"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kogito.adoc:235
@@ -593,7 +593,7 @@ msgstr "ネイティブモードでの実行"
 #. type: Plain text
 #: upstream/_versions/main/guides/kogito.adoc:262
 msgid "To run the microservice in dev mode, use:"
-msgstr ""
+msgstr "マイクロサービスをdevモードで実行する場合、次を実行して下さい:"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/kogito.adoc:265
@@ -641,7 +641,7 @@ msgstr "これは、生成されたバイナリーにランタイム技術が含
 #. type: Plain text
 #: upstream/_versions/main/guides/kogito.adoc:290
 msgid "Compilation will take a bit longer, so this step is disabled by default; let's build a native executable with the following command:"
-msgstr ""
+msgstr "コンパイルには少し時間がかかるので、このステップはデフォルトでは無効になっています。以下のコマンドでネイティブ実行可能ファイルをビルドしてみましょう。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kogito.adoc:294
@@ -940,7 +940,7 @@ msgstr "https://docs.jboss.org/kogito/release/latest/html_single[Kogito Document
 #. type: Plain text
 #: upstream/_versions/main/guides/kogito.adoc:487
 msgid "xref:kogito-dev-services.adoc[Kogito Dev Services]"
-msgstr ""
+msgstr "xref:kogito-dev-services.adoc[Kogito Dev Services]"
 
 #~ msgid "To complete this guide, you need:"
 #~ msgstr "このガイドを完成させるには、以下が必要です:"
