--- a/l10n/po/ja_JP/_versions/main/guides/stork-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/stork-reference.adoc.po
@@ -149,7 +149,7 @@ msgstr ""
 #: upstream/_versions/main/guides/stork-reference.adoc:215
 #, no-wrap
 msgid "Dependency"
-msgstr ""
+msgstr "依存関係"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork-reference.adoc:65
