--- a/l10n/po/ja_JP/_versions/main/guides/kogito-dmn.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kogito-dmn.adoc.po
@@ -336,7 +336,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/kogito-dmn.adoc:150
 msgid "To run the microservice in dev mode, use:"
-msgstr ""
+msgstr "マイクロサービスをdevモードで実行する場合、次を実行して下さい:"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/kogito-dmn.adoc:153
@@ -384,7 +384,7 @@ msgstr "これは、生成されたバイナリーにランタイム技術が含
 #. type: Plain text
 #: upstream/_versions/main/guides/kogito-dmn.adoc:178
 msgid "Compilation will take a bit longer, so this step is disabled by default; let's build a native executable with the following command:"
-msgstr ""
+msgstr "コンパイルには少し時間がかかるので、このステップはデフォルトでは無効になっています。以下のコマンドでネイティブ実行可能ファイルをビルドしてみましょう。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kogito-dmn.adoc:182
