--- a/l10n/po/ja_JP/_versions/main/guides/security-jwt.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-jwt.adoc.po
@@ -1729,7 +1729,7 @@ msgstr "mp.jwt.verify.publickey"
 #: upstream/_versions/main/guides/security-jwt.adoc:1018
 #, no-wrap
 msgid "non"
-msgstr ""
+msgstr "non"
 
 #. type: Table
 #: upstream/_versions/main/guides/security-jwt.adoc:978
@@ -1753,7 +1753,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-jwt.adoc:979
 #, no-wrap
 msgid "mp.jwt.verify.publickey.algorith"
-msgstr ""
+msgstr "mp.jwt.verify.publickey.algorith"
 
 #. type: Table
 #: upstream/_versions/main/guides/security-jwt.adoc:979
@@ -1771,7 +1771,7 @@ msgstr "署名アルゴリズム。 `ES256` に設定して、楕円曲線署名
 #: upstream/_versions/main/guides/security-jwt.adoc:980
 #, no-wrap
 msgid "mp.jwt.decrypt.key.location"
-msgstr ""
+msgstr "mp.jwt.decrypt.key.location"
 
 #. type: Table
 #: upstream/_versions/main/guides/security-jwt.adoc:981
@@ -1795,7 +1795,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-jwt.adoc:982
 #, no-wrap
 msgid "mp.jwt.verify.audience"
-msgstr ""
+msgstr "mp.jwt.verify.audience"
 
 #. type: Table
 #: upstream/_versions/main/guides/security-jwt.adoc:983
@@ -1807,7 +1807,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-jwt.adoc:983
 #, no-wrap
 msgid "mp.jwt.token.header"
-msgstr ""
+msgstr "mp.jwt.token.header"
 
 #. type: Table
 #: upstream/_versions/main/guides/security-jwt.adoc:983
@@ -1826,7 +1826,7 @@ msgstr ""
 #: upstream/_versions/main/guides/security-jwt.adoc:984
 #, no-wrap
 msgid "mp.jwt.token.cooki"
-msgstr ""
+msgstr "mp.jwt.token.cooki"
 
 #. type: Table
 #: upstream/_versions/main/guides/security-jwt.adoc:985
