Add some translations

--- a/l10n/po/ja_JP/_guides/qute.adoc.po
+++ b/l10n/po/ja_JP/_guides/qute.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-02-08 17:12+0000\n"
-"PO-Revision-Date: 2022-02-03 10:46+0900\n"
+"PO-Revision-Date: 2022-04-12 14:32+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -59,15 +59,13 @@ msgstr "JAX-RS で Hello World"
 
 #. type: Plain text
 #: upstream/_guides/qute.adoc:29
-#, fuzzy
 msgid "If you want to use Qute in your JAX-RS application, you need to add an extension first:"
-msgstr "JAX-RS アプリケーションで Qute を使用する場合は、まず `quarkus-resteasy-qute` のエクステンションを追加する必要があります。 `pom.xml` ファイルに以下を追加します:"
+msgstr "JAX-RS アプリケーションで Qute を使用する場合は、まずエクステンションを追加する必要があります:"
 
 #. type: Plain text
 #: upstream/_guides/qute.adoc:31
-#, fuzzy
 msgid "either `quarkus-resteasy-qute` if you are using RESTEasy Classic:"
-msgstr "RESTEasy Classicを使用している場合は、 `quarkus-resteasy-qute` のいずれかです。"
+msgstr "RESTEasy Classicを使用している場合は、 `quarkus-resteasy-qute` :"
 
 #. type: Block title
 #: upstream/_guides/qute.adoc:33 upstream/_guides/qute.adoc:50
@@ -99,9 +97,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/qute.adoc:48
-#, fuzzy
 msgid "or `quarkus-resteasy-reactive-qute` if you are using RESTEasy Reactive:"
-msgstr "または、RESTEasy Reactive を使用している場合は `quarkus-resteasy-reactive-qute` 。"
+msgstr "または、RESTEasy Reactive を使用している場合は `quarkus-resteasy-reactive-qute`:"
 
 #. type: delimited block -
 #: upstream/_guides/qute.adoc:56
