--- a/l10n/po/ja_JP/_guides/tests-with-coverage.adoc.po
+++ b/l10n/po/ja_JP/_guides/tests-with-coverage.adoc.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2022-03-09 21:10+0000\n"
-"PO-Revision-Date: 2022-02-02 16:11+0900\n"
+"PO-Revision-Date: 2022-04-12 14:30+0900\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: ja\n"
@@ -111,7 +111,6 @@ msgstr "ここで、アプリケーションをテストで適切にカバーす
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:59
-#, fuzzy
 msgid "First, a JAX-RS resource serving a hello endpoint:"
 msgstr "まず、helloエンドポイントを提供するアプリケーション:"
 
@@ -298,9 +297,8 @@ msgstr "Jacocoの設定"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:157
-#, fuzzy
 msgid "Now we need to add Jacoco to our project. To do this we need to add the following to the build file:"
-msgstr "次に、Jacocoをプロジェクトに追加する必要があります。そのためには、 `pom.xml` dependenciesセクションに以下を追加する必要があります。"
+msgstr "次に、Jacocoをプロジェクトに追加する必要があります。そのために、ビルドファイルに以下を追加する必要があります。"
 
 #. type: Block title
 #: upstream/_guides/tests-with-coverage.adoc:159
@@ -337,9 +335,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:176
-#, fuzzy
 msgid "This Quarkus extension takes care of everything that would usually be done via the Jacoco Maven plugin, so no additional config is required."
-msgstr "このQuarkusのエクステンションは、通常はJacoco mavenプラグインで行われることをすべて行いますので、追加の設定は必要ありません。"
+msgstr "このQuarkusのエクステンションは、通常はJacoco Mavenプラグインで行われることをすべて行いますので、追加の設定は必要ありません。"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:179
@@ -501,7 +498,6 @@ msgstr "`quarkus.package.write-transformed-bytecode-to-build-output=true` の設
 
 #. type: delimited block *
 #: upstream/_guides/tests-with-coverage.adoc:279
-#, fuzzy
 msgid "In the `pom.xml`, you can add the following plugin configuration for Jacoco. This will append integration test data into the same destination file as unit tests, re-build the Jacoco report after the integration tests are complete, and thus produce a comprehensive code-coverage report."
 msgstr "`pom.xml` で、Jacocoのプラグイン設定を以下のように追加します。これにより、結合テストのデータをユニットテストと同じ保存先のファイルに追加し、結合テストが完了した後にjacocoレポートを再構築することで、包括的なコードカバレッジレポートを作成します。"
 
@@ -591,15 +587,14 @@ msgstr "`quarkus.test.arg-line` で同じ値を共有すると、異なるタイ
 
 #. type: Title ==
 #: upstream/_guides/tests-with-coverage.adoc:354
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Setting coverage thresholds"
-msgstr "Mavenのビルドにカバレッジのしきい値を設定する"
+msgstr "カバレッジの閾値を設定"
 
 #. type: Plain text
 #: upstream/_guides/tests-with-coverage.adoc:358
-#, fuzzy
 msgid "You can set thresholds for code coverage using the Jacoco Maven plugin. Note the element `<dataFile>${project.build.directory}/jacoco-quarkus.exec</dataFile>`.  You must set it matching your choice for `quarkus.jacoco.data-file`."
-msgstr "コードカバレッジのしきい値は、Jacoco Mavenプラグインを使って設定することができます。 `<dataFile>${project.build.directory}/jacoco-quarkus.exec</dataFile>` という要素に注意してください。 `quarkus.jacoco.data-file` の選択に合わせて設定する必要があります。"
+msgstr "コードカバレッジの閾値は、Jacoco Mavenプラグインを使って設定することができます。 `<dataFile>${project.build.directory}/jacoco-quarkus.exec</dataFile>` という要素に注意してください。 `quarkus.jacoco.data-file` の選択に合わせて設定する必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/tests-with-coverage.adoc:406
